# block-sync

./: CMakeLists.txt  LICENSE  ManifestExample.json  README.md
src/: main.cpp
src/core/: hashing.cpp  hashing.h
src/io/: manifest.cpp  manifest.h  sync.cpp  sync.h
src/io/docs/: ManifestExample.json
src/util/: helpers.cpp  helpers.h
